# esi-lease-notifier

./: Containerfile  README.md  esi-lease-notifier.example.yaml  pyproject.toml  pyrightconfig.json  requirements.txt
cron/: esi-lease-notifier-daily  esi-lease-notifier-expiring
esi_lease_notifier/: api.py  app.py  cli.py  idp.py  mailer.py  models.py  templates.py
postfix-outbound/: Containerfile  entrypoint.sh  postfix-outbound.env
templates/: body.html  body.txt
templates/expiring/: body.html  body.txt  subject.txt
templates/weekly/: body.html  body.txt  subject.txt
tests/: conftest.py  fakes.py  test_app.py  test_cli.py  test_smtp_mailer.py
